# Physix2D

./: .gitignore  CMakeLists.txt  README.md
docs/: benchmarking.md  integradores.md  roadmap.md
include/: body.hpp  vec2.hpp  world.hpp
include/math/: vec2.hpp
include/physics/: body.hpp  world.hpp
include/sim/: ISystem.hpp  collisionSystem.hpp  movementSystem.hpp  systemManager.hpp
include/utils/: timer.hpp
src/: body.cpp  main.cpp  vec2.cpp  world.cpp
src/math/: vec2.cpp
src/physics/: body.cpp  world.cpp
src/sim/: collisionSystem.cpp  movementSystem.cpp  systemManager.cpp
tests/: CMakeLists.txt  main_test.cpp  test_collisions.cpp  test_constructors.cpp  test_integrator_stability.cpp  test_integrators.cpp  test_random_inicialization.cpp
tests/utilities/: test_helpers.hpp
tools/: aggregate_benchmarks.py  bench_stats.py  benchmark.cpp
